# cord19-explorer

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  article.py  forms.py  modelling.py  routes.py
app/static/models/: cord_smallbert_grounding.pt
app/static/stylesheets/: style.css
app/templates/: index.html
