[tool.poetry]
name = "covid-retrieval"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
transformers = "^2.7.0"
flask = "^1.1.1"
jupyter = "^1.0.0"
flask-wtf = "^0.14.3"
nltk = "^3.4.5"
tqdm = "^4.44.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
